<resources>
    <string name="app_name">Farmers en</string>

    <string name="facebook_app_id">889106887840848</string>

    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789</string>

    <!--//tutorial-->
    <string name="tutorial_skip">Skip</string>
    <string name="tutorial_content_1">
        Welcome Lhaikr peasant farmers \n
        exposes
         social app, compares and \n keep
          statistics of prices Plant\n Council,
        the wholesale market and \nprices for
        marketers.
      </string>
    <string name="tutorial_content_2">
        Any increase is being updated\n
        on a daily basis in front of \n
        the Plant Council, the wholesale\n
        market and price your own reseller,\n
        you can see prices in other markets\n
        fed by your friends Farmers
    </string>

    <string name="tutorial_next">Next</string>
    <string name="test_login_fragment">Login Fragment</string>
    <string name="test_tutorial_fragment">Tutorial Fragment</string>
    <!--TODO-->

    <!--//login-->
    <string name="login_text_header">The main thing is the farmer</string>
    <string name="login_text_subheader">Prices tumors comfortably</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirm">Confirm Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_text_login">Login</string>
    <string name="login_or">or</string>
    <string name="login_text_login_facebook">Login with Facebook</string>
    <string name="login_register">Register</string>
    <string name="login_is_not_register">Not a member yet?</string>
    <string name="toolbar_item_menu">menu</string>
    <string name="toolbar_item_search">Search</string>

    <string name="log_out">Log Out</string>

    <!--//dialogs-->
    <string name="dialog_title_forgot_password">Please, enter your email</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_understood">I realized</string>
    <string name="dialog_progress_message_default">Please wait…</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_correct">Correct</string>
    <string name="dialog_please_correct">Please check all the information you entered is correct</string>


    <!--//sign_up-->
    <string name="sign_up_full_name">Full name</string>
    <string name="sign_up_text_sign_up">Sign up</string>
    <string name="sign_up_register_facebook">Register with Facebook</string>
    <string name="sign_up_text_login">Login</string>
    <string name="sign_up_is_registred">Registered already?</string>

    <!--//after sign up-->
    <string name="after_sign_header">A little something, immediately ending!</string>
    <string name="after_sign_text">We\'d love to know who your reseller, so you can enter the price of your reseller Recent anonymously and securely for the benefit of other farmers and farmers exposed to other marketers prices</string>
    <string name="after_sign_enter_marketeer">Enter the name of your dealer</string>
    <string name="after_sign_start">Let\'s start</string>
    <string name="after_sign_skip">Skip</string>
    <string name="after_sign_propose_skip">You can jump, but then not be exposed to prices in other markets</string>

    <!--//after sign b/ selection marketeer-->
    <string name="select_marketeer_text_name">Name marketer</string>
    <string name="select_marketeer_add_name">Add a new marketer </string>


    <!--//drawer-->
    <string name="drawer_content_0">All crops</string>
    <string name="drawer_content_1">Add reseller price</string>
    <string name="drawer_content_2">Invite friends</string>
    <string name="drawer_content_3">My Favorites</string>
    <string name="drawer_content_4">LogOut</string>
    <string name="drawer_content_5">Add Marketer</string>
    <string name="drawer_content_6">Change Marketer</string>

    <!--//main activity-->
    <string name="main_activity_tab_all_crops">All crops</string>
    <string name="main_activity_tab_favourites">My favourites</string>
    <string name="search_label"><u>Search crops</u></string>
    <string name="no_crops_found">"No crops found:\n"</string>
    <string name="all">" all"</string>
    <string name="tap_to_refresh_price">Tap to refresh price</string>

    <!-- add price-->
    <string name="add_price_change_date">Change Date</string>
    <string name="add_price_hint_price">Price?</string>
    <string name="add_price_hint_type">Type?</string>
    <string name="add_price_incorrect_price">Price is not right</string>
    <string name="add_price_example_type">example: export‬</string>
    <string name="add_price_add_button">Add‫‬</string>
    <string name="add_price_add_type">+ Click here to add another category</string>

    <!--prices activity-->
    <string name="prices_activity_tab1">Statistics</string>
    <string name="prices_activity_tab2">Marketeer prices</string>
    <string name="prices_activity_tab3">All prices</string>
    <string name="all_prices_more_price">More prices</string>
    <string name="icon">icon</string>


    <string name="date_picker_to">to</string>
    <string name="tab1">Statistics</string>
    <string name="tab2">Marketeer prices</string>
    <string name="tab3">All prices</string>
    <string name="alert_message_after_registration_check_mail">Please check email and confirm of recitation</string>


    <string name="alert_message_after_add_price">Thank you for sharing! The more you share the more you see other marketers prices!</string>
    <string name="message_sure_change_marketer">Are you sure you want to change marketer?</string>


    <!-- period picker-->
    <string name="period_picker_choose">Choose date</string>

    <!--Dialog Fragments-->
    <string name="title">‏\u200Ftitle</string>
    <string name="subtilte">\u200F‏subtitle</string>
    <string name="foot">\u200F text date</string>

    <string name="why_c_no_prices">Why i can see\nno prices?</string>
    <string name="add_price">Add price</string>
    <string name="more_prices">More prices</string>


    <!--Calendar-->
    <string name="month1">January</string>
    <string name="month2">February</string>
    <string name="month3">March</string>
    <string name="month4">April</string>
    <string name="month5">May</string>
    <string name="month6">June</string>
    <string name="month7">July</string>
    <string name="month8">August</string>
    <string name="month9">September</string>
    <string name="month10">October</string>
    <string name="month11">November</string>
    <string name="month12">December</string>

    <!--Statistics-->
    <string name="statistics_description_1">Average prices under 3 years</string>

    <string name="page_number_one_statistics_fragment">1 of 2</string>
    <string name="page_number_two_statistics_fragment">2 of 2</string>



    <string name="page_head_one_statistics_fragment">In what month price /"agbniot ministers Tmr/" was the highest?</string>
    <string name="page_head_two_statistics_fragment">What is expected to pick first?</string>

    <string name="chart_head_page_two_statistics_fragment">In %s month price was highest.</string>

    <!--//global-->
    <string name="price_prefix">₪</string>
    <string name="your_dealer">המשווק שלך</string>
    <string name="whole_sales">שוק סיטונאי</string>
    <string name="plant_counsil">מועצת הצמחים</string>
    <string name="fill_prices_correctly">Please fill field correctly</string>
    <string name="show_all_time">לכל התאריכים</string>
    <string name="dialog_head_invite">Invite</string>
    <string name="dialog_titile_lost_connection">Internet Connection Lost</string>
    <string name="dilog_msg_lost_connection">Please Check your internet connection.</string>

</resources>
