<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/login_fragment_padding"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_above="@+id/llLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_header"
            android:id="@+id/tvHeader"
            android:textSize="@dimen/login_text_header_size"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/login_margin_top_header"
            style="@style/TextLoginScreen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text_subheader"
            android:id="@+id/tvSubheader"
            android:textSize="@dimen/login_text_subheader_size"
            style="@style/TextLoginScreen" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/llLogin"
        android:gravity="center_horizontal">

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/etEmail"

            android:singleLine="true"
            android:hint="@string/login_email"
            android:imeOptions="actionNext"
            android:textSize="@dimen/login_text_size"
            style="@style/EditLoginScreen" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_divider_height"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/login_margin_btn_logins" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:id="@+id/etPassword"
                android:singleLine="true"

                android:imeOptions="actionDone"

                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ 0123456789"

                android:hint="@string/login_password"
                android:textSize="@dimen/login_text_size"
                style="@style/EditLoginScreen" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/ivShowPass"
                android:src="@drawable/show_password_icon"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_divider_height"
            android:background="@color/white"
            android:layout_marginBottom="@dimen/login_margin_btn_logins" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/login_forgot_password"
            android:id="@+id/tvForgot"
            style="@style/TextLoginScreen"
            android:layout_marginBottom="@dimen/login_margin_btn_login_edit"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_login_height"
            android:gravity="center"
            android:id="@+id/btnLogin"
            android:clickable="true"
            android:background="@drawable/btn_login">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_btn_login_height"
                android:text="@string/login_text_login"
                android:id="@+id/tvLogin"
                android:textSize="@dimen/login_text_size"
                android:textStyle="bold"
                style="@style/TextLoginScreen" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:id="@+id/textView4"
            android:textSize="@dimen/login_text_size"
            style="@style/TextLoginScreen"
            android:layout_marginTop="@dimen/login_margin_btn_logins"
            android:layout_marginBottom="@dimen/login_margin_btn_logins" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_login_height"
            android:gravity="center"
            android:id="@+id/btnLoginFB"
            android:background="@drawable/btn_login_facebook">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text_login_facebook"
                android:id="@+id/tvLoginFB"
                android:textSize="@dimen/login_text_size"
                android:textStyle="bold"
                android:drawableLeft="@drawable/icon_fb"
                android:drawablePadding="@dimen/login_small_padding_margin"
                style="@style/TextLoginScreen" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_register_login_fb">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_btn_register_height"
                android:text="@string/login_is_not_register"
                android:id="@+id/textView3"
                android:textSize="@dimen/login_text_size"
                style="@style/TextLoginScreen" />

            <View android:layout_height="0dp" android:layout_width="6.5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_btn_register_height"
                android:text="@string/login_register"
                android:id="@+id/tvRegister"
                android:gravity="center"
                android:textSize="@dimen/login_text_size"
                android:background="@drawable/btn_register"
                android:paddingBottom="@dimen/login_btn_register_padding_top_bottom"
                android:paddingTop="@dimen/login_btn_register_padding_top_bottom"
                android:paddingLeft="@dimen/login_btn_register_padding_left_right"
                android:paddingRight="@dimen/login_btn_register_padding_left_right"
                android:layout_marginRight="@dimen/login_small_padding_margin"
                android:textStyle="bold"
                style="@style/TextLoginScreen" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>