<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/login_fragment_padding"
    android:background="@drawable/bg_login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:layout_above="@+id/llLogin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.farmers.underground.ui.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_register"
                android:id="@+id/textView"
                android:layout_centerInParent="true"
                style="@style/WhiteMainRegularText"/>

            <ImageView
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/sign_up_arrow_padding"
                android:id="@+id/ivBack_FSU"
                android:src="@drawable/arrow_back"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rlIcon">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_centerInParent="true"
                android:src="@drawable/circles_avatar"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_centerInParent="true"
                android:src="@drawable/user_oval" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/llLogin"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/login_margin_btn_logins"
            android:layout_marginTop="@dimen/login_margin_btn_logins"
            android:background="@color/bg_edit_text_sign_up">

            <com.farmers.underground.ui.custom_views.CustomEditText
                style="@style/EditSignUpScreen"
                android:layout_width="match_parent"
                android:id="@+id/etName_FSU"
                android:hint="@string/sign_up_full_name"

                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/etEmail_FSU" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_divider_height"
                android:background="@color/black" />

            <com.farmers.underground.ui.custom_views.CustomEditText
                android:layout_width="match_parent"
                android:id="@id/etEmail_FSU"

                android:imeOptions="actionNext"
                android:nextFocusForward="@+id/etPassword_FSU"

                android:paddingRight="@dimen/sign_up_edit_text_margin_padding"
                android:paddingLeft="@dimen/sign_up_edit_text_margin_padding"
                android:hint="@string/login_email"
                style="@style/EditSignUpScreen"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_divider_height"
                android:background="@color/black"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/ivShowPass_FSU"
                    android:src="@drawable/eye_line"
                    android:layout_marginLeft="@dimen/sign_up_edit_text_margin_padding"/>

                <com.farmers.underground.ui.custom_views.CustomEditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@id/etPassword_FSU"

                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/etConfirm_FSU"

                    android:paddingRight="@dimen/sign_up_edit_text_margin_padding"
                    android:paddingLeft="@dimen/sign_up_edit_text_margin_padding"
                    android:gravity="right|center_vertical"
                    android:hint="@string/login_password"
                    android:digits="@string/digits"
                    style="@style/EditSignUpScreen" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_divider_height"
                android:background="@color/black" />

            <com.farmers.underground.ui.custom_views.CustomEditText
                android:layout_width="match_parent"
                android:id="@id/etConfirm_FSU"

                android:paddingLeft="@dimen/sign_up_edit_text_margin_padding"
                android:paddingRight="@dimen/sign_up_edit_text_margin_padding"

                android:imeOptions="actionDone"

                android:hint="@string/login_password_confirm"
                android:digits="@string/digits"
                style="@style/EditSignUpScreen"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_login_height"
            android:gravity="center"
            android:id="@+id/btnSignUp_FSU"
            android:background="@drawable/btn_login">

            <com.farmers.underground.ui.custom_views.CustomTextView
                android:text="@string/sign_up_text_sign_up"
                android:id="@+id/tvSignUp_FSU"
                style="@style/ButtonSignScreens"/>
        </LinearLayout>

        <com.farmers.underground.ui.custom_views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_or"
            android:id="@+id/textView4"
            style="@style/WhiteMainRegularText"
            android:layout_margin="@dimen/login_margin_btn_logins"/>

        <LinearLayout
            style="@style/ButtonSignScreens"
            android:id="@+id/btnSignUpFB_FSU"
            android:background="@drawable/btn_login_facebook">

            <com.farmers.underground.ui.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_register_facebook"
                android:id="@+id/tvSignUpFB_FSU"
                android:drawableRight="@drawable/icon_fb"
                android:drawablePadding="@dimen/login_small_padding_margin"
                style="@style/ButtonSignScreens" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_margin_register_login_fb">

            <com.farmers.underground.ui.custom_views.CustomTextView
                android:text="@string/sign_up_text_login"
                android:id="@+id/tvLogin_FSU"
                style="@style/ButtonAqua"/>

            <View android:layout_height="0dp" android:layout_width="6.5dp"/>

            <com.farmers.underground.ui.custom_views.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/login_btn_register_height"
                android:text="@string/sign_up_is_registred"
                custom:customFont="regular"
                style="@style/WhiteNormalRegularText" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>