<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/login_fragment_padding"
    android:background="@drawable/bg_login"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llStart">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/after_sign_header"
            android:textSize="@dimen/after_sign_header_text_size"
            android:layout_margin="@dimen/login_fragment_padding"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/after_sign_text"
            android:layout_marginLeft="@dimen/login_fragment_padding"
            android:layout_marginRight="@dimen/login_fragment_padding"
            android:gravity="center"
            android:textColor="@color/white"
            android:id="@+id/textView5"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/after_sign_enter_marketeer_margin_top"
            android:text="@string/after_sign_enter_marketeer"
            android:textColor="@color/white"
            android:id="@+id/tvEnterMarketeer"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_divider_height"
            android:layout_marginTop="8dp"
            android:background="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llStart"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_btn_login_height"
            android:gravity="center"
            android:layout_marginBottom="@dimen/after_sign_margin_start_skip"
            android:background="@color/bg_btn_login"
            android:id="@+id/btnStart">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/after_sign_start"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/textView7"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="@dimen/login_btn_register_width"
                android:layout_height="@dimen/login_btn_register_height"
                android:gravity="center"
                android:text="@string/after_sign_skip"
                android:id="@+id/tvSkip"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_gravity="bottom"
                android:background="@drawable/btn_register"
                android:paddingBottom="@dimen/login_btn_register_padding_top_bottom"
                android:paddingTop="@dimen/login_btn_register_padding_top_bottom"
                android:paddingLeft="@dimen/login_btn_register_padding_left_right"
                android:paddingRight="@dimen/login_btn_register_padding_left_right" />

            <View
                android:layout_width="30dp"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/after_sign_propose_skip"
                android:id="@+id/textView9" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>