<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp" >

    <RelativeLayout
        android:id="@+id/rl_head"
        android:background="#ff2222"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_toLeftOf="@+id/im_Logo"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/subtilte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <ImageView
            android:id="@+id/im_Logo"
            android:layout_margin="12dp"
            android:src="@android:drawable/ic_dialog_info"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <ImageView
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <ListView
        android:id="@+id/lv_items"
        android:layout_below="@+id/rl_head"
        android:layout_width="match_parent"
        android:layout_height="240dp"/>

    <TextView
        android:id="@+id/tv_foot"
        android:text="@string/foot"
        android:layout_below="@+id/lv_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>